<resources>
    <string name="app_name">Uskunalar.uz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="line">Линии производства</string>
    <string name="all_user">Посмотреть все</string>
    <string name="discount">Оборудования на скидке</string>
    <string name="best_seller">Лучше продаваемые</string>
    <string name="our_work">Наши работы</string>
    <string name="articles">Советы и маколалар</string>
    <string name="vedio">Видео</string>
    <string name="category">Категории</string>
</resources>